# ShowSecondsInSystemClock

./: CMakeLists.txt  README.md  SB_registry.h  ShowSecondsInSystemClock.aps  ShowSecondsInSystemClock.rc  ShowSecondsInSystemClock.sln  ShowSecondsInSystemClock.vcxproj  ShowSecondsInSystemClock.vcxproj.filters  Source.c  icon.rc  main.c  resource.h
